feat: add explainable vehicle recommendations (V3.1)
